# hdcalib

./: .gitignore  2dgauss.cpp  CMakeLists.txt  README.md  add-noise.cpp  analyze-detection-rates.cpp  analyze-lf.cpp  analyze-video.cpp  calib.cpp  calib.h  check-corner-cache.cpp  compare-images.cpp  cornercache.cpp  cornercache.h  cornercolor.cpp  cornercolor.h  cornerstore.cpp  downscale.cpp  extract-green.cpp  fit-grid.cpp  fitgrid-lib.cpp  griddescription.cpp  griddescription.h  hdcalib-analyze-grid.cpp  hdcalib-ceres-calib.cpp  hdcalib-export-stars.cpp  hdcalib-fill-black.cpp  hdcalib-lensfun.cpp  hdcalib-offset-comparison.cpp  hdcalib-overexposed.cpp  hdcalib-readwrite.cpp  hdcalib-rectify.cpp  hdcalib-spline-calib.cpp  hdcalib-stats.cpp  hdcalib-visualize-stars.cpp  hdcalib.cpp  hdcalib.h  image-series-noise.cpp  libdownscale.cpp  libdownscale.h  (+22 more)
